stops seemingly random alignment of element names

--- a/css/style.css
+++ b/css/style.css
@@ -1257,7 +1257,6 @@ nav ul {
     width: 17.7215189873%;
     margin: 0;
     text-align: right;
-    padding: 0 5.2631578947%;
   }
 }
 @media screen {
